Thu Dec 11 14:56:37 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/utils/Node_Daemon/Node_Daemon_Server.cpp:

          . Added try...catch blocks to the shutdown () method.

        * cuts/utils/testing/svcs/server/Testing_Server.cpp:

          . Removed the 'name' of the testing application from the test manager
            name in the IORTable. Now, its name is CUTS/TestManager, which makes
            resolving it by location a LOT easier.

        * cuts/workers/Test_Logger/TestLogger.xme:

          . GME model for using the TestLogger in a CBML/WML model.

        * cuts/workers/Test_Logger/Test_Logger.h:
        * cuts/workers/Test_Logger/Test_Logger.cpp:
        * cuts/workers/Test_Logger/Test_Logger_i.h:
        * cuts/workers/Test_Logger/Test_Logger_i.cpp:

          . Implemented a connect_using_location () method that connects to the
            test manager using a locations, such as hostname:port.

Wed Dec 10 16:36:16 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MDE/naomi/GME/GNC_App.cpp:

          . Fixed format of a log message.

Wed Dec 10 16:25:14 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * CUTS_CoSMIC.mwc:

          . Added the NAOMI projects to the workspace.

        * MDE/GME/paradigms/PICML/interpreter/Isislab_Emulation/Isislab_Emulation.cpp:
        * MDE/naomi/GME/Attribute_Tag.h:
        * MDE/naomi/GME/GNC.cpp:
        * MDE/naomi/GME/GNC.mpc:
        * MDE/naomi/GME/GNC_App.h:
        * MDE/naomi/GME/GNC_App.cpp:
        * MDE/naomi/GME/Naomi_Generator.cpp:
        * MDE/naomi/GME/generators/CUTS_Isislab_Emulation/Isislab_Emulation_Generator.cpp:
        * MDE/naomi/GME/generators/DAnCE_Deployment/DAnCE_Deployment_Generator.cpp:
        * MDE/naomi/GME/gnc.mwc:

          . Fixed build errors related the Windows SUBSYSTEM specification.

          . Fixed build errors related to new location of GAME in CoSMIC.
