@@ -1,3 +1,11 @@
+Thu Dec 11 20:05:19 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
+
+        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/EISA/Generators.h:
+        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/EISA/Generators.cpp:
+
+          . Bug fix where the executor file were linking against the wrong
+            servant files.
+
 Thu Dec 11 14:56:37 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
 
         * cuts/utils/Node_Daemon/Node_Daemon_Server.cpp:
